Translate's wrapping has 1 pixel gap in X and Y after scale node #36113

Closed
opened 2013-07-12 13:47:55 +02:00 by WK Bong · 5 comments

%%%--- Operating System, Graphics card ---
Windows 7 64 bit, GTX 560ti

- Blender version with error, and version that worked ---

Problem occur on all blender version since Translate has wrapping (Since 2.66a) including 2.68 RC1

- Short description of error ---

Making tiling texture with wrapping in the compositor will cause 1 pixel gap when

  1. Scale is 1.0 on X and Y with
  2. translation that is has decimal places

The gap disappears when

  1. scale is larger than 1.0 on both axis or

  2. translate is whole number

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---
      Play with scale X and Y
      and translate not whole number for X and Y

Switch for changing image or texture

%%%

%%%--- Operating System, Graphics card --- Windows 7 64 bit, GTX 560ti - Blender version with error, and version that worked --- Problem occur on all blender version since Translate has wrapping (Since 2.66a) including 2.68 RC1 - Short description of error --- Making tiling texture with wrapping in the compositor will cause 1 pixel gap when 1. Scale is 1.0 on X and Y with 2. translation that is has decimal places The gap disappears when 1. scale is larger than 1.0 on both axis or 2. translate is whole number - Steps for others to reproduce the error (preferably based on attached .blend file) --- Play with scale X and Y and translate not whole number for X and Y Switch for changing image or texture %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%This is about how interpolation after wrapping currently happens. Doesn't work well for non-integer coordinates. It's not a new issue, and will look into it after 2.68.%%%

%%%This is about how interpolation after wrapping currently happens. Doesn't work well for non-integer coordinates. It's not a new issue, and will look into it after 2.68.%%%
Author

%%%Thanks Sergey for the update.%%%

%%%Thanks Sergey for the update.%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36113
No description provided.