source/blender/compositor/operations/COM_ReadBufferOperation.h
@@ -41,6 +41,8 @@ public:
 	
 	void *initializeTileData(rcti *rect);
 	void executePixel(float output[4], float x, float y, PixelSampler sampler);
+	void executePixelExtend(float output[4], float x, float y, PixelSampler sampler,
+	                        MemoryBufferExtend extend_x, MemoryBufferExtend extend_y);
 	void executePixel(float output[4], float x, float y, float dx, float dy, PixelSampler sampler);
 	const bool isReadBufferOperation() const { return true; }
 	void setOffset(unsigned int offset) { this->m_offset = offset; }
